# demo-homeassistant

./: .gitignore  README.md  docker-compose.yaml
appdaemon/: appdaemon.yaml
appdaemon/apps/: apps.yaml  pyproject.toml  simulation.py  solar_diverter.py  thermostat.py
appdaemon/apps/mock/: dryer.py  pv.py  washing_machine.py
appdaemon/apps/tests/: test_power.py
appdaemon/plantuml/: solar_diverter.plantuml
conf/apps/: apps.yaml  solar_diverter.py
conf/apps/tests/: dryer.py  pv.py  washing_machine.py
config/: automations.yaml  climates.yaml  configuration.yaml  customize.yaml  groups.yaml  input_booleans.yaml  input_numbers.yaml  sensors.yaml
